[metadata]
name = oeuvre
description = Library to make interacting with testing corpora easier
long-description = file: README.rst
home-page = https://github.com/pycqa/oeuvre
author = Ian Cordasco
author-email = graffatcolmingov@gmail.com
keywords = corpora oeuvre testing
requires =
    PyYAML (>= 3.12)

[options]
include-package-data = True
packages = oeuvre
package-dir =
    = src/

[bdist_wheel]
universal = 1
